--- a/biome.json
+++ b/biome.json
@@ -7,14 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": [
-      "**",
-      "!node_modules",
-      "!.next",
-      "!dist",
-      "!build",
-      "!graphql"
-    ]
+    "includes": ["**", "!node_modules", "!.next", "!dist", "!build", "!graphql"]
   },
   "formatter": {
     "enabled": true,
