fix: another pull_request_target types

--- a/.github/workflows/llm-action.yml
+++ b/.github/workflows/llm-action.yml
@@ -2,7 +2,7 @@ name: AI Code Review
 
 on:
   pull_request_target:
-    types: [opened, synchronize]
+    types: [opened, synchronize, labeled]
 
 jobs:
   code-review:
@@ -26,10 +26,7 @@ jobs:
         uses: appleboy/llm-action@v1
         with:
           base_url: https://generativelanguage.googleapis.com/v1beta/openai
-          headers: |
-            {
-              "x-goog-api-key": "${{ secrets.GEMINI_API_KEY }}"
-            }
+          api_key: ${{ secrets.GEMINI_API_KEY }}
           model: gemini-2.5-pro
           system_prompt: |
             你是一位資深的程式碼審查專家。請根據以下標準審查程式碼：
