--- a/.github/workflows/llm-action.yml
+++ b/.github/workflows/llm-action.yml
@@ -13,10 +13,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Fetch PR head refs
+        run: |
+          git fetch origin pull/${{ github.event.pull_request.number }}/head:pr-head
+
       - name: Get PR diff
         id: diff
         run: |
-          DIFF=$(git diff origin/${{ github.base_ref }}...HEAD | base64 -w 0)
+          DIFF=$(git diff origin/${{ github.base_ref }}...pr-head | base64 -w 0)
           echo "diff<<EOF" >> $GITHUB_OUTPUT
           echo "$DIFF" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
@@ -76,7 +80,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const score = '${{ steps.review.outputs.score }} || 'N/A';
+            const score = '${{ steps.review.outputs.score }}' || 'N/A';
             const summary = '${{ steps.review.outputs.summary }}';
             const issues = '${{ steps.review.outputs.issues }}';
             const suggestions = '${{ steps.review.outputs.suggestions }}';
