--- a/.github/workflows/llm-action.yml
+++ b/.github/workflows/llm-action.yml
@@ -27,130 +27,60 @@ jobs:
 
       - name: AI Code Review
         id: review
-        uses: actions/github-script@v7
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        uses: appleboy/llm-action@v1
         with:
-          script: |
-            const diffBase64 = '${{ steps.diff.outputs.diff }}';
-            const apiKey = process.env.GEMINI_API_KEY;
+          base_url: https://generativelanguage.googleapis.com
+          api_key: ${{ secrets.GEMINI_API_KEY }}
+          model: gemini-2.5-pro
+          system_prompt: |
+            你是一位資深的程式碼審查專家。請根據以下標準審查程式碼：
+            1. 程式碼品質與可讀性
+            2. 潛在的 Bug 或安全漏洞
+            3. 效能問題
+            4. 最佳實踐建議
+            5. 請務必嚴格依照 tool_schema 輸出，且不要包含任何多餘文字。
+          input_prompt: |
+            以下是 Pull Request 的 diff（base64 編碼）：
+            請先解碼後再進行程式碼審查。
 
-            if (!apiKey) {
-              core.setFailed('GEMINI_API_KEY secret is missing.');
-              return;
-            }
-
-            if (!diffBase64) {
-              core.setFailed('Diff output is empty. Ensure the diff step succeeded.');
-              return;
-            }
-
-            const diff = Buffer.from(diffBase64, 'base64').toString('utf8').trim();
-
-            if (!diff) {
-              core.setFailed('Diff is empty. Add code changes before requesting AI review.');
-              return;
-            }
-
-            const systemPrompt = [
-              '你是一位資深的程式碼審查專家，請根據以下標準審查程式碼：',
-              '1. 程式碼品質與可讀性',
-              '2. 潛在的 Bug 或安全漏洞',
-              '3. 效能問題',
-              '4. 最佳實踐建議',
-              '5. 回傳結果時必須嚴格符合 JSON schema，且不要包含任何多餘文字。'
-            ].join('\n');
-
-            const userPrompt = [
-              '以下是 Pull Request 的 diff：',
-              '',
-              diff
-            ].join('\n');
-
-            const responseSchema = {
-              type: 'object',
-              properties: {
-                score: {
-                  type: 'string',
-                  description: '評分 1-10，10 為最佳'
+            ${{ steps.diff.outputs.diff }}
+          tool_schema: |
+            {
+              "name": "code_review",
+              "description": "程式碼審查結果",
+              "parameters": {
+                "type": "object",
+                "properties": {
+                  "score": {
+                    "type": "string",
+                    "description": "評分 1-10，10 為最佳"
+                  },
+                  "summary": {
+                    "type": "string",
+                    "description": "審查摘要，50 字以內"
+                  },
+                  "issues": {
+                    "type": "string",
+                    "description": "發現的問題，以 markdown 列表格式"
+                  },
+                  "suggestions": {
+                    "type": "string",
+                    "description": "改善建議，以 markdown 列表格式"
+                  },
+                  "approved": {
+                    "type": "string",
+                    "description": "是否建議合併：yes 或 no"
+                  }
                 },
-                summary: {
-                  type: 'string',
-                  description: '審查摘要，50 字以內'
-                },
-                issues: {
-                  type: 'string',
-                  description: '發現的問題，以 markdown 列表格式'
-                },
-                suggestions: {
-                  type: 'string',
-                  description: '改善建議，以 markdown 列表格式'
-                },
-                approved: {
-                  type: 'string',
-                  description: '是否建議合併：yes 或 no'
-                }
-              },
-              required: ['score', 'summary', 'issues', 'suggestions', 'approved']
-            };
-
-            const payload = {
-              systemInstruction: {
-                role: 'system',
-                parts: [{ text: systemPrompt }]
-              },
-              contents: [
-                {
-                  role: 'user',
-                  parts: [{ text: userPrompt }]
-                }
-              ],
-              generationConfig: {
-                temperature: 0.2,
-                responseMimeType: 'application/json',
-                responseSchema,
-                maxOutputTokens: 1024
+                "required": ["score", "summary", "issues", "suggestions", "approved"]
               }
-            };
-
-            const response = await fetch(
-              `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-pro:generateContent?key=${apiKey}`,
-              {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(payload)
+            }
+          tool_choice: |
+            {
+              "type": "function",
+              "function": {
+                "name": "code_review"
               }
-            );
-
-            if (!response.ok) {
-              const errorText = await response.text();
-              core.setFailed(`Gemini API error: ${response.status} ${response.statusText} - ${errorText}`);
-              return;
-            }
-
-            const data = await response.json();
-            const content = data?.candidates?.[0]?.content?.parts
-              ?.map((part) => part.text ?? '')
-              .join('')
-              .trim();
-
-            if (!content) {
-              core.setFailed(`Gemini API returned an empty response: ${JSON.stringify(data)}`);
-              return;
-            }
-
-            let parsed;
-            try {
-              parsed = JSON.parse(content);
-            } catch (error) {
-              core.setFailed(`Model response was not valid JSON: ${content}`);
-              return;
-            }
-
-            const fields = ['score', 'summary', 'issues', 'suggestions', 'approved'];
-            for (const field of fields) {
-              const value = parsed[field] ?? '';
-              core.setOutput(field, value);
             }
 
       - name: Comment on PR
