--- a/.github/workflows/llm-action.yml
+++ b/.github/workflows/llm-action.yml
@@ -2,7 +2,7 @@ name: AI Code Review
 
 on:
   pull_request_target:
-    types: [opened, synchronize, labeled]
+    types: [labeled]
 
 jobs:
   code-review:
