fix: use dev as head

--- a/.github/workflows/llm-action.yml
+++ b/.github/workflows/llm-action.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Get PR diff
         id: diff
         run: |
-          DIFF=$(git diff origin/${{ github.base_ref }}...pr-head | base64 -w 0)
+          DIFF=$(git diff origin/dev...pr-head | base64 -w 0)
           echo "diff<<EOF" >> $GITHUB_OUTPUT
           echo "$DIFF" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
