--- a/.github/workflows/llm-action.yml
+++ b/.github/workflows/llm-action.yml
@@ -43,8 +43,8 @@ jobs:
               return;
             }
 
-            const SINGLE_CHUNK_LIMIT = 60_000;
-            const CHUNK_CHAR_LIMIT = 30_000;
+            const SINGLE_CHUNK_LIMIT = 60000;
+            const CHUNK_CHAR_LIMIT = 30000;
 
             let diff = fs.readFileSync(diffFile, 'utf8').trim();
             if (!diff) {
