feat: wire dashboard & module management to sqlite
- add workflow/template/module models and seeds
- switch dashboard/module pages to server-side sqlite reads
- add db fetch helpers and empty states
- update README and env ignore rules

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+
+# local sqlite
+data/*.db
 
 # vercel
 .vercel
@@ -39,3 +43,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.vscode/settings.json
+Feat
+PRPs
+prisma/data/workflow.db
