--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.14.0",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -27,6 +28,7 @@
     "react-dom": "19.2.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
+    "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.18",
     "concurrently": "^9.2.1",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
@@ -50,5 +53,8 @@
     "onlyBuiltDependencies": [
       "sharp"
     ]
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
